# tachyonot

./: .gitattributes  .gitignore  CHANGELOG  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli.py  cli.spec  config.yaml  gui.py  hmi_script.sh  models.yaml  pyproject.toml  requirements.txt  setup.py  vm_panel_setup.sh  window.py
.github/workflows/: main.yml
data/: Report_000.xlsx  Report_001.xlsx  Report_004.xlsx
scripts/: panel-build.sh  panel_setup.sh  vm_panel_setup.sh
simatic/: __init__.py  __main__.py  asr.py  base_llm.py  config.py  helpers.py  inference.py  llama.py  llama_cpp.py  llm.py  memoize.py  profile.html  profile.json  rag.py  test.py
simatic/commands/: __init__.py  chat.py  listen.py  stt.py  text.py  tts.py
simatic/models/: __init__.py  llm.py  modelling.py  rag.py  speech.py  text.py  whipser.py
simatic/rag/: embedding.py  vectorstore.py
simatic/utils/: __init__.py  helpers.py  memoize.py  schema.py  templates.py
src/tachyonot/: app.py
src/tachyonot/commands/: __init__.py  chat.py  listen.py
src/tachyonot/models/: agent.py  llama.py  whipser.py
src/tachyonot/rag/: embedding.py  vectorstore.py
src/tachyonot/utils/: __init__.py  config.py  helpers.py  templates.py
stress_testing/: extract_results.py  llm_test.sh  prompts.txt
tachyonot/: __init__.py  window.py
tachyonot/commands/: __init__.py  listen.py
tachyonot/models/: llama.py  whipser.py
tachyonot/rag/: embedding.py  vectorstore.py
tachyonot/utils/: config.py  helpers.py  schema.py
wheels/: faiss-1.8.0-py2.py3-none-any.whl  pywhispercpp-1.2.0-cp39-cp39-linux_x86_64.whl
